--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 transformers==4.45.0
-torch==2.7.1
+torch>=2.6.0
 accelerate==0.32.0
 datasets==2.17.1
 lm-eval==0.4.9.1
 termcolor
+
+## for plot flatness
+matplotlib
+brokenaxes
 
 ## for Llama2-tokenizer
 sentencepiece
